Fix excess items login branch

--- a/login.html
+++ b/login.html
@@ -31,12 +31,12 @@
 					<div class="login-form p-10 pt-30 pb-30">
 						<h1 class="text-center login-heading mt-0 pt-0">Вход на сайт</h1>
 						<form>
-							<div class="notify error-email-hide notify--error mb-20">Введите email</div>
-							<div class="notify format-email-hide notify--error mb-20">Неверный формат email</div>
-							<div class="notify error-password-hide notify--error mb-20">Введите пароль</div>
+							<div class="notify notify--error mb-20">Введите email</div>
+							<div class="notify notify--error mb-20">Неверный формат email</div>
+							<div class="notify notify--error mb-20">Введите пароль</div>
 							<div class="notify no-paddings">
-								<div class="notify no-radius-bottom email-and-password-error notify--error">Неверный email или пароль</div>
-								<div class="notify no-radius-top email-and-password-error">
+								<div class="notify no-radius-bottom notify--error">Неверный email или пароль</div>
+								<div class="notify no-radius-top">
 									<p>Введите верные данные для входа или воспользуйтесь
 										<a href="#!">восстановлением пароля </a>, чтобы войти на сайт.</p>
 								</div>
