--- a/login.html
+++ b/login.html
@@ -34,9 +34,9 @@
 							<div id="email-error-block" class="notify empty-email notify--error mb-20">Введите email</div>
 							<div id="wrong-email-format-block" class="notify wrong-email notify--error mb-20">Неверный формат email</div>
 							<div id="password-error-block" class="notify empty-password notify--error mb-20">Введите пароль</div>
-							<div class="notify no-paddings">
-								<div id="email-password-wrong-block" class="notify wrong-email-or-password no-radius-bottom notify--error">Неверный email или пароль</div>
-								<div class="notify wrong-email-or-password no-radius-top">
+							<div id="email-password-wrong-block" class="notify wrong-email-or-password no-paddings">
+								<div class="notify no-radius-bottom notify--error">Неверный email или пароль</div>
+								<div class="notify no-radius-top">
 									<p>Введите верные данные для входа или воспользуйтесь
 										<a href="#!">восстановлением пароля </a>, чтобы войти на сайт.</p>
 								</div>
