--- a/comment.html
+++ b/comment.html
@@ -19,9 +19,9 @@
 					<img src="img/avatars/avatar.jpg" alt="avatar" />
 				</div>
 			</div>
-			<form class="comment-add-block__right" action="success.html">
+			<form id="comment-form" class="comment-add-block__right" action="success.html">
 				<h6 class="comment-add-block__right-title">Егор Казаков</h6>
-				<div class="notify notify-hide notify--error">Комментарий не может быть пустым</div>
+				<div id="error-block" class="notify notify-hide notify--error">Комментарий не может быть пустым</div>
 				<textarea class="textarea textarea--comment-add" name="add_comment" placeholder="Присоединиться к обсуждению..."></textarea>
 				<input type="submit" value="Опубликовать" class="button">
 			</form>
