--- a/registration.html
+++ b/registration.html
@@ -30,11 +30,11 @@
 				<div class="login-form__background">
 					<div class="login-form pt-30 pb-30">
 						<h1 class="text-center login-heading mt-0 pt-0">Регистрация</h1>
-						<form>
-							<div class="notify notify--error mb-20">Введите email</div>
-							<div class="notify notify--error mb-20">Неверный формат email</div>
-							<div class="notify notify--error mb-20">Введите пароль</div>
-							<div class="notify no-paddings">
+						<form id="registration-form" action="success.html">
+							<div id="email-error-block" class="notify empty-email-reg notify--error mb-20">Введите email</div>
+							<div id="wrong-email-format-block" class="notify wrong-email-reg notify--error mb-20">Неверный формат email</div>
+							<div id="password-error-block" class="notify empty-password-reg notify--error mb-20">Введите пароль</div>
+							<div id="email-busy" class="notify email-busy-reg no-paddings">
 								<div class="notify no-radius-bottom notify--error">Данный email уже занят</div>
 								<div class="notify no-radius-top">
 									<p>Используйте другой email чтобы создать новый аккаунт.</p>
@@ -42,10 +42,10 @@
 										<a href="#!">восстановлением пароля </a>, чтобы войти на сайт.</p>
 								</div>
 							</div>
-							<input class="input-form-registration" name="email" type="email" placeholder="Email" />
-							<input class="input-form-registration" name="password" type="password" placeholder="Пароль" />
+							<input id="email-input" class="input-form-registration" name="email" type="email" placeholder="Email" />
+							<input id="password-input" class="input-form-registration" name="password" type="password" placeholder="Пароль" />
 							<div class="text-center pt-30">
-								<a class="button button--enter" href="#">Регистрация</a>
+								<input type="submit" value="Регистрация" class="button button--enter">
 							</div>
 						</form>
 					</div>
